# draw-guess

./: .env  .gitignore  README.md  package.json
script/: pre-run.js
server/: Cargo.toml  Dockerfile  words.txt
server/src/: actor.rs  app.rs  draw_data.rs  log.rs  main.rs  message.rs  player.rs  room.rs  word.rs  wrap.rs
server/src/graph/: mod.rs  token_query.graphql
src/: App.scss  App.tsx  index.scss  index.tsx
src/components/Button/: Button.scss  Button.tsx
src/components/ChatContent/: ChatContent.scss  ChatContent.tsx
src/components/CountDown/: CountDown.tsx
src/components/DrawGuess/: DrawGuess.scss  DrawGuess.tsx
src/components/Footer/: Footer.scss  Footer.tsx
src/components/GamePanel/: GamePanel.scss  GamePanel.tsx
src/components/GamePanel/StageChoose/: StageChoose.scss  StageChoose.tsx
src/components/GamePanel/StageDraw/: StageDraw.scss  StageDraw.tsx
src/components/GamePanel/StageDraw/EventChannel/: EventChannel.tsx
src/components/GamePanel/StageDraw/FunctionPanel/: FunctionPanel.tsx
src/components/GamePanel/StageReady/: StageReady.scss  StageReady.tsx
src/components/GamePanel/StageResult/: StageResult.scss  StageResult.tsx
src/components/Header/: Header.scss  Header.tsx
src/components/Seat/: Seat.scss  Seat.tsx
src/net/: http.ts
src/state/: chatState.ts  gameState.ts  infoState.ts  roomState.ts  store.ts
src/style/: fn.scss
src/utils/: canvas2image.ts  eventBus.ts  hooks.ts  polling.ts  utils.ts
