[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
uuid = { version = "0.8.2", features = ["v4"]}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
lazy_static="1.4.0"
actix-cors = "0.5.4"
chrono = "0.4.19"
rand = "0.8.4"
unicode-segmentation = "1.8.0"
log = "0.4.0"
env_logger = "0.9.0"
cynic = { version = "0.10", features = ["surf"] }
surf = "2.0.0"
reqwest = { version="0.11.11", features = ["json"] }
once_cell = "1.13.0"
